# src/controllers/users/CreateUser.ts
@@ -9,22 +9,24 @@ import { components } from '../../../types/api';
 import { UsersEntity } from '../../dbEntities';
 import User from '../../models/User';
 
-export default class CreateAccounts {
+export default class CreateUser {
   private readonly usersRepository: Repository<UsersEntity>;
 
   private readonly data: components['schemas']['UserRequest'];
 
+  private readonly logger: Logger;
 
-  constructor(data: components['schemas']['UserRequest']) {
+  constructor(data: components['schemas']['UserRequest'], logger: Logger) {
     this.data = data;
+    this.logger = logger;
     this.usersRepository = appDatasource.getRepository(UsersEntity);
   }
 
-  async exec(logger: Logger): Promise<components['schemas']['UserResponse']> {
+  async exec(): Promise<components['schemas']['UserResponse']> {
     const existingUser = await this.usersRepository.findOneBy({ email: this.data.email });
     if (existingUser) {
-      logger.info(`User ${this.data.email} already has an account`);
-      throw new AccessError(UserErrorCodes.userAlreadyHasAccount);
+      this.logger.info(`User ${this.data.email} already has an account`);
+      throw new AccessError(UserErrorCodes.userAlreadyExists);
     }
 
     const user = new User( {
